* template: fix menu covered.

--- a/template/src/index/less/core.less
+++ b/template/src/index/less/core.less
@@ -52,7 +52,6 @@ body {
     align-items: center;
     flex-grow: 1;
     justify-content: space-between;
-    padding-right: 50px;
     border-left: 1px solid @brand-border-color;
     background-color: @color-back;
     box-shadow: 0 1px 4px @box-shadow-color;
@@ -82,76 +81,81 @@ body {
         background-color: @link-hover-bgcolor;
       }
     }
-
-    .navbar-nav {
-      display: flex;
-      align-items: center;
-
-      #search {
-        max-width: 800px;
-        margin: 0 auto;
-        position: relative;
-        margin-right: 10px;
-
-        .icon-search-container {
-          position: absolute;
-          background-color: @color-secondary;
-          left: 0;
-          top: 0;
-          width: 38px;
-          height: 32px;
-          color: #fff;
-          border-radius: 20px 0 0 20px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-      }
-
-      #searchInput {
-        padding-left: 40px;
-        color: #666;
-        border: 1px solid @color-secondary;
-        border-radius: 20px;
-        width: 200px;
-        transition: width 0.5s ease-in-out;
-      }
-
-      #searchInput::placeholder {
-        color: #8d8d8d;
-      }
-
-      #searchInput:focus {
-        width: 280px;
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px rgba(51, 51, 51, .275);
-      }
-
-      .has-avatar {
-        float: left;
-
-        >a {
-          color: @link-color;
-
-          &:hover {
-            background-color: @link-hover-bgcolor;
-          }
-        }
-
-        .notice {
-          position: absolute;
-          margin-top: -4px;
-          margin-left: -4px;
-        }
-      }
-
-      .icon {
-        font-size: 21px;
-      }
-    }
   }
 }
 
 /* header end */
+
+/* navbar-nav start */
+.navbar-nav {
+  display: flex;
+  align-items: center;
+  margin-top: 3px;
+  margin-right: 20px;
+
+  #search {
+    max-width: 800px;
+    margin: 0 auto;
+    position: relative;
+    margin-right: 10px;
+
+    .icon-search-container {
+      position: absolute;
+      background-color: @color-secondary;
+      left: 0;
+      top: 0;
+      width: 38px;
+      height: 32px;
+      color: #fff;
+      border-radius: 20px 0 0 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  #searchInput {
+    padding-left: 40px;
+    color: #666;
+    border: 1px solid @color-secondary;
+    border-radius: 20px;
+    width: 200px;
+    transition: width 0.5s ease-in-out;
+  }
+
+  #searchInput::placeholder {
+    color: #8d8d8d;
+  }
+
+  #searchInput:focus {
+    width: 240px;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px rgba(51, 51, 51, .275);
+  }
+
+  .has-avatar {
+    float: left;
+
+    >a {
+      color: @link-color;
+
+      &:hover {
+        background-color: @link-hover-bgcolor;
+      }
+    }
+
+    .notice {
+      position: absolute;
+      margin-top: -4px;
+      margin-left: -4px;
+    }
+  }
+
+  .icon {
+    font-size: 21px;
+  }
+}
+
+/* navbar-nav end */
 
 .modal {
   .modal-body {
@@ -257,7 +261,7 @@ body {
   right: 0;
   bottom: 0;
   left: 230px;
-  padding: 0 10px 40px 10px;
+  padding: 0 10px 46px 10px;
   transition: left .5s ease-in-out;
   background-color: @main-bgcolor;
 }
@@ -269,7 +273,7 @@ body {
     position: absolute;
     top: -40px;
     left: 40px;
-    right: 350px;
+    right: 380px;
 
     .tabs-nav {
       height: auto;
